Now checks latest measurment against last measurment on vindsiden.no